--- a/landingpage.html
+++ b/landingpage.html
@@ -22,7 +22,7 @@
     <img src="media/images/imagenLaura.jpg" type="image/jpg " ></img>
     </section >
     <div class=contenido-horizontal>     
-        <h2>valora el contenido de nuestra web y no te pierdas de las proxima novedades.</h2> 
+        <h2>valora el contenido de nuestra web y no te pierdas de las proxima novedades por favor</h2> 
         <form id=formulario action="resultado.html" method="get" class="formulario" id="encuesta">
                 <fieldset>
                     <legend>Formulario de encuesta</legend>
